--- a/package.json
+++ b/package.json
@@ -151,6 +151,14 @@
     "nohoist": [
       "**/@types",
       "**/@types/**",
+      "**/styled-jsx/**",
+      "**/styled-jsx",
+      "**/react/**",
+      "**/react",
+      "**/next/**",
+      "**/next",
+      "**/react-dom/**",
+      "**/react-dom",
       "**/svelte",
       "**/svelte/**",
       "**/svelte-loader",
