--- a/nextjs-ssr/checkout/package.json
+++ b/nextjs-ssr/checkout/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "rm -rf .next;next dev",
     "build": "next build",
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
     "@module-federation/nextjs-mf": "6.3.1-beta.1",
     "lodash": "4.17.21",
-    "next": "12.3.4",
+    "next": "13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "webpack": "5.72.1",
-    "webpack-merge": "^5.8.0"
+    "webpack": "5.72.1"
   }
 }
