--- a/advanced-api/dynamic-remotes/app2/package.json
+++ b/advanced-api/dynamic-remotes/app2/package.json
@@ -19,8 +19,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "moment": "^2.24.0",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "moment": "^2.24.0"
+    "react-dom": "^16.13.0"
   }
 }
