--- a/angular-universal-ssr/package.json
+++ b/angular-universal-ssr/package.json
@@ -20,8 +20,8 @@
     "e2e:ci": "node e2e.ci.js"
   },
   "devDependencies": {
+    "concurrently": "^7.6.0",
     "lerna": "6.4.1",
-    "wait-on": "^7.0.1",
-    "concurrently": "^7.6.0"
+    "wait-on": "^7.0.1"
   }
 }
