--- a/federated-npm/app1/package.json
+++ b/federated-npm/app1/package.json
@@ -19,9 +19,9 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
     "lodash": "^4.17.21",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   }
 }
