--- a/angular15-microfrontends-lazy-components/projects/mdmf-shared/package.json
+++ b/angular15-microfrontends-lazy-components/projects/mdmf-shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mdmf-shared",
+  "name": "mdmf-sharedlazy",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "13.3.11",
