--- a/modernjs-medusa/provider/package.json
+++ b/modernjs-medusa/provider/package.json
@@ -33,19 +33,19 @@
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
+    "@modern-js-app/eslint-config": "2.13.4",
     "@modern-js/app-tools": "2.13.4",
     "@modern-js/eslint-config": "2.13.4",
     "@modern-js/tsconfig": "2.13.4",
-    "@modern-js-app/eslint-config": "2.13.4",
     "@module-federation/dashboard-plugin": "^2.8.0-beta.6",
-    "lint-staged": "~13.1.0",
-    "prettier": "~2.8.1",
-    "husky": "~8.0.1",
-    "rimraf": "~3.0.2",
-    "typescript": "~4.9.4",
     "@types/jest": "~29.2.4",
     "@types/node": "~16.11.7",
     "@types/react": "~18.0.26",
-    "@types/react-dom": "~18.0.10"
+    "@types/react-dom": "~18.0.10",
+    "husky": "~8.0.1",
+    "lint-staged": "~13.1.0",
+    "prettier": "~2.8.1",
+    "rimraf": "~3.0.2",
+    "typescript": "~4.9.4"
   }
 }
