--- a/react-18-ssr/remote1/package.json
+++ b/react-18-ssr/remote1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-ssr/remote1",
+  "name": "@react-ssr/18-remote1",
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
