--- a/react-in-vue/layout/package.json
+++ b/react-in-vue/layout/package.json
@@ -12,10 +12,10 @@
     "@babel/core": "^7.11.0",
     "@vue/compiler-sfc": "^3.0.11",
     "babel-loader": "^8.1.0",
-    "serve": "^13.0.0",
-    "vue": "^3.0.11",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "serve": "^13.0.0",
+    "vue": "^3.0.11"
   },
   "devDependencies": {
     "css-loader": "6.7.3",
