--- a/vite-react-simple/vite-react/package.json
+++ b/vite-react-simple/vite-react/package.json
@@ -17,17 +17,17 @@
     "serve-static": "1.14.1"
   },
   "devDependencies": {
+    "@rollup/plugin-virtual": "2.0.3",
     "@types/lodash-es": "4.17.7",
     "@types/react": "17.0.58",
     "@types/react-dom": "17.0.19",
     "@vitejs/plugin-react-refresh": "1.3.6",
     "cross-env": "7.0.3",
+    "estree-walker": "1.0.1",
+    "magic-string": "0.26.2",
     "nodemon": "2.0.22",
     "typescript": "4.3.5",
     "vite": "2.9.14",
-    "vite-plugin-externals": "0.5.0",
-    "estree-walker": "1.0.1",
-    "@rollup/plugin-virtual": "2.0.3",
-    "magic-string": "0.26.2"
+    "vite-plugin-externals": "0.5.0"
   }
 }
