--- a/comprehensive-demo-react18/app-04/package.json
+++ b/comprehensive-demo-react18/app-04/package.json
@@ -5,17 +5,15 @@
   "devDependencies": {
     "cross-env": "7.0.3",
     "css-loader": "6.7.3",
-    "html-webpack-plugin": "5.5.0",
+    "html-webpack-plugin": "5.5.1",
     "mini-css-extract-plugin": "2.7.5",
     "serve": "13.0.4",
     "style-loader": "3.3.2",
     "svelte": "3.57.0",
     "svelte-loader": "3.1.7",
-    "html-webpack-plugin": "5.5.1",
     "webpack": "5.72.1",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.13.3",
-    "serve": "13.0.4"
+    "webpack-dev-server": "4.13.3"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
