--- a/comprehensive-demo-react18/app-05/package.json
+++ b/comprehensive-demo-react18/app-05/package.json
@@ -12,15 +12,13 @@
   },
   "devDependencies": {
     "cross-env": "7.0.3",
-    "html-webpack-plugin": "5.5.0",
+    "html-webpack-plugin": "5.5.1",
     "lit-element": "2.5.1",
     "serve": "13.0.4",
     "ts-loader": "5.4.5",
     "typescript": "4.3.5",
-    "html-webpack-plugin": "5.5.1",
     "webpack": "5.72.1",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.13.3",
-    "serve": "13.0.4"
+    "webpack-dev-server": "4.13.3"
   }
 }
