--- a/typescript-monorepo/app1/package.json
+++ b/typescript-monorepo/app1/package.json
@@ -12,7 +12,7 @@
     "html-webpack-plugin": "5.5.1",
     "serve": "13.0.4",
     "typescript": "4.3.5",
-    "typescript-monorepo_app2": "file:../app2",
+    "typescript-monorepo_app2": "0.0.0",
     "webpack": "5.72.1",
     "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.13.3"
