--- a/medusa-nx-native-federation-example/package.json
+++ b/medusa-nx-native-federation-example/package.json
@@ -7,27 +7,22 @@
     "dsl:build:production": "npx nx run dsl:build:production --verbose --skip-nx-cache",
     "dsl:serve": "npx nx run dsl:serve --verbose --skip-nx-cache",
     "dsl:dashboard": "npx nx run dsl:dashboard --verbose",
-
     "nav:build": "npx nx run nav:build --verbose",
     "nav:build:production": "npx nx run nav:build:production --verbose --skip-nx-cache",
     "nav:serve": "npx nx run nav:serve --verbose --skip-nx-cache",
     "nav:dashboard": "npx nx run nav:dashboard --verbose",
-
     "search:build": "npx nx run search:build --verbose",
     "search:build:production": "npx nx run search:build:production --verbose --skip-nx-cache",
     "search:serve": "npx nx run search:serve --verbose --skip-nx-cache",
     "search:dashboard": "npx nx run search:dashboard --verbose",
-
     "home:build": "npx nx run home:build --verbose",
     "home:build:production": "npx nx run home:build:production --verbose --skip-nx-cache",
     "home:serve": "npx nx run home:serve --verbose --skip-nx-cache",
     "home:dashboard": "npx nx run home:dashboard --verbose",
-
     "utils:build": "npx nx run utils:build --verbose",
     "utils:build:production": "npx nx run utils:build:production --verbose --skip-nx-cache",
     "utils:serve": "npx nx run utils:serve --verbose --skip-nx-cache",
     "utils:dashboard": "npx nx run utils:dashboard --verbose",
-
     "build:all": "npx nx run-many --target=build --projects=utils,dsl,nav,search,home --parallel=5 --verbose",
     "start:all": "npx nx run-many --target=serve --projects=utils,dsl,nav,search,home --parallel=5 --verbose --skip-nx-cache",
     "dashboard:all": "npx nx run-many --target=dashboard --projects=utils,dsl,nav,search,home --parallel=5"
@@ -55,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
     "babel-jest": "28.1.3",
+    "cross-fetch": "^3.1.5",
     "cypress": "^10.7.0",
     "esbuild": "0.15.7",
     "eslint": "~8.15.0",
