--- a/.gitignore
+++ b/.gitignore
@@ -121,5 +121,6 @@ buildServer
 **/cypress/screenshots/**
 **/cypress/results/**
 **/cypress/report/**
-/.yarn/cache/
-/.yarn/install-state.gz
+**/.yarn/cache/
+**/.yarn/install-state.gz
+
