--- a/package.json
+++ b/package.json
@@ -146,7 +146,9 @@
       "./modernjs",
       "./modernjs/*",
       "./modernjs-medusa",
-      "./modernjs-medusa/*"
+      "./modernjs-medusa/*",
+      "./medusa-example",
+      "./medusa-example/*"
     ],
     "nohoist": [
       "**/@types",
