--- a/medusa-example/home/package.json
+++ b/medusa-example/home/package.json
@@ -9,6 +9,7 @@
     "@webpack-cli/serve": "1.7.0",
     "babel-loader": "9.0.1",
     "css-loader": "6.7.3",
+    "esbuild-loader": "2.20.0",
     "html-webpack-plugin": "5.5.1",
     "less": "4.1.3",
     "less-loader": "11.1.0",
@@ -16,8 +17,7 @@
     "style-loader": "3.3.2",
     "webpack": "5.80.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.13.3",
-    "esbuild-loader": "2.20.0"
+    "webpack-dev-server": "4.13.3"
   },
   "scripts": {
     "start": "webpack-cli serve",
