--- a/medusa-example/utils/package.json
+++ b/medusa-example/utils/package.json
@@ -8,11 +8,11 @@
     "@module-federation/dashboard-plugin": "2.8.0-beta.6",
     "@webpack-cli/serve": "1.7.0",
     "babel-loader": "9.0.1",
+    "esbuild-loader": "2.20.0",
     "serve": "14.0.1",
     "webpack": "5.80.0",
     "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.13.3",
-    "esbuild-loader": "2.20.0"
+    "webpack-dev-server": "4.13.3"
   },
   "scripts": {
     "start": "webpack-cli serve",
