--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -4,6 +4,7 @@ on: pull_request
 env:
   CACHE_PATH: |
     **/node_modules
+    **/.yarn/cache
     ~/.cache/Cypress
     ~/.cache/yarn/v6
   FILES_TO_DELETE: |
