--- a/modernjs/provider/package.json
+++ b/modernjs/provider/package.json
@@ -32,18 +32,18 @@
     "react-dom": "~18.2.0"
   },
   "devDependencies": {
-    "@modern-js/app-tools": "2.13.4",
-    "@modern-js/eslint-config": "2.13.4",
-    "@modern-js/tsconfig": "2.13.4",
-    "@modern-js-app/eslint-config": "2.13.4",
-    "lint-staged": "~13.1.0",
-    "prettier": "~2.8.1",
-    "husky": "~8.0.1",
-    "rimraf": "~3.0.2",
-    "typescript": "~4.9.4",
-    "@types/jest": "~29.2.4",
-    "@types/node": "~16.11.7",
-    "@types/react": "~18.0.26",
-    "@types/react-dom": "~18.0.10"
+    "@modern-js/app-tools": "2.15.0",
+    "@modern-js/eslint-config": "2.15.0",
+    "@modern-js/tsconfig": "2.15.0",
+    "@modern-js-app/eslint-config": "2.15.0",
+    "lint-staged": "13.1.4",
+    "prettier": "2.8.8",
+    "husky": "8.0.3",
+    "rimraf": "3.0.2",
+    "typescript": "4.9.5",
+    "@types/jest": "29.5.1",
+    "@types/node": "16.11.68",
+    "@types/react": "18.0.38",
+    "@types/react-dom": "18.0.11"
   }
 }
