--- a/nextjs-ssr/shop/package.json
+++ b/nextjs-ssr/shop/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production next start -p 3002"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.3.1-beta.1",
+    "@module-federation/nextjs-mf": "^6.4.1-beta.0",
     "lodash": "4.17.21",
     "next": "12.3.4",
     "react": "^18.2.0",
