--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,137 +1,100 @@
 packages:
-  - "./advanced-api/automatic-vendor-sharing"
-  - "./advanced-api/automatic-vendor-sharing/*"
-  - "./advanced-api/dynamic-remotes-runtime-environment-variables/"
-  - "./advanced-api/dynamic-remotes-runtime-environment-variables/*"
-  - "./advanced-api/dynamic-remotes-synchronous-imports"
-  - "./advanced-api/dynamic-remotes-synchronous-imports/*"
-  - "./advanced-api/dynamic-remotes"
-  - "./advanced-api/dynamic-remotes/*"
-  - "./angular-universal-ssr"
-  - "./angular-universal-ssr/*"
-  - "./angular11-microfrontends-ngrx"
-  - "./angular11-microfrontends-ngrx/*"
-  - "./angular11-microfrontends-ngxs"
-  - "./angular11-microfrontends-ngxs/*"
-  - "./angular11-microfrontends-scully"
-  - "./angular11-microfrontends-scully/*"
-  - "./angular12-microfrontends"
-  - "./angular14-react"
-  - "./angular14-react/*"
-  - "./angular15-microfrontends-lazy-components"
-  - "./apollo-client"
-  - "./basic-host-remote"
-  - "./basic-host-remote/*"
-  - "./bi-directional"
-  - "./bi-directional/*"
-  - "./complete-react-case"
-  - "./complete-react-case/*"
-  - "./comprehensive-demo-react16"
-  - "./comprehensive-demo-react16/*"
-  - "./comprehensive-demo-react18"
-  - "./comprehensive-demo-react18/*"
-  - "./cra"
-  - "./cra/*"
-  - "./css-isolation"
-  - "./css-isolation/*"
-  - "./cypress"
-  - "./dashboard-example/*"
-  - "./delegate-modules"
-  - "./delegate-modules/*"
-  - "./different-react-versions-16-17-typescript"
-  - "./different-react-versions-16-17"
-  - "./different-react-versions-16-18-typescript"
-  - "./different-react-versions-16-18"
-  - "./different-react-versions-isolated"
-  - "./different-react-versions-isolated/*"
-  - "./different-react-versions-typescript"
-  - "./different-react-versions-typescript/*"
-  - "./different-react-versions"
-  - "./different-react-versions/*"
-  - "./dynamic-system-host"
-  - "./dynamic-system-host/*"
-  - "./federated-npm"
-  - "./federated-npm/*"
-  - "./genesis"
-  - "./genesis/*"
-  - "./loadable-react-18"
-  - "./loadable-react-18/*"
-  - "./loadable-react-spectrum"
-  - "./loadable"
-  - "./native-federation-tests-typescript-plugins"
-  - "./native-federation-tests-typescript-plugins/*"
-  - "./nested"
-  - "./nested/*"
-  - "./nextjs-bi-directional/*"
-  - "./nextjs-react"
-  - "./nextjs-react/*"
-  - "./nextjs-sidecar/*"
-  - "./nextjs-ssr"
-  - "./nextjs-ssr/*"
-  - "./nextjs-ssr-react-query"
-  - "./react-16-17-18-ssr"
-  - "./react-18-code-splitting"
-  - "./react-18-code-splitting/*"
-  - "./react-18-server-2-server"
-  - "./react-18-server-2-server/*"
-  - "./react-18-ssr"
-  - "./react-hmr"
-  - "./react-hmr/*"
-  - "./react-in-vue"
-  - "./react-in-vue/*"
-  - "./react-nested-routers"
-  - "./react-nested-routers/*"
-  - "./react-nextjs/nextjs-host-react-remote"
-  - "./react-nextjs/nextjs-host-react-remote/*"
-  - "./react-nextjs/react-host-nextjs-remote"
-  - "./react-nextjs/react-host-nextjs-remote/*"
-  - "./react-nextjs/react-host-remote"
-  - "./react-nextjs/react-host-remote/*"
-  - "./react-spectrum"
-  - "./redux-reducer-injection"
-  - "./redux-reducer-injection/*"
-  - "./self-healing"
-  - "./self-healing/*"
-  - "./server-side-render-only"
-  - "./server-side-rendering"
-  - "./server-side-rendering/*"
-  - "./shared-context"
-  - "./shared-context/*"
-  - "./shared-routes2"
-  - "./shared-routes2/*"
-  - "./shared-routing"
-  - "./shared-routing/*"
-  - "./shared-store-cross-framework"
-  - "./shared-store-cross-framework/*"
-  - "./startup-code"
-  - "./startup-code/*"
-  - "./styled-components"
-  - "./third-party-scripts"
-  - "./third-party-scripts/*"
-  - "./typescript-monorepo"
-  - "./typescript-monorepo/*"
-  - "./typescript-project-references"
-  - "./typescript-project-references/*"
-  - "./umd-federation"
-  - "./umd-federation/*"
-  - "./version-discrepancy"
-  - "./version-discrepancy/*"
-  - "./vite-react-microfrontends"
-  - "./vite-react-microfrontends/*"
-  - "./vite-react-simple"
-  - "./vite-react-simple/*"
-  - "./vite-svelte-microfrontends"
-  - "./vite-svelte-microfrontends/*"
-  - "./vite-vue-microfrontends"
-  - "./vite-vue-microfrontends/*"
-  - "./vue-cli/*"
-  - "./vue2-in-vue3"
-  - "./vue2-in-vue3/*"
-  - "./vue3-demo-federation-with-vite"
-  - "./vue3-demo-federation-with-vite/*"
-  - "./vue3-demo"
-  - "./vue3-demo/*"
-  - "./modernjs"
-  - "./modernjs/*"
-  - "./modernjs-medusa"
-  - "./modernjs-medusa/*"
+  - './nextjs-ssr-delegate-modules'
+  - './shared-store-cross-framework'
+  - './native-federation-core-microfrontend'
+  - './nextjs-ssr-react-query'
+  - './vite-react-simple'
+  - './react-16-17-18-ssr'
+  - './nextjs-antd'
+  - './angular15-vue3'
+  - './nextjs-ssr'
+  - './different-react-versions'
+  - './typescript-project-references'
+  - './react-nested-routers'
+  - './basic-host-remote'
+  - './dynamic-remotes-node'
+  - './comprehensive-demo-react16'
+  - './styled-components'
+  - './federated-npm'
+  - './cypress'
+  - './comprehensive-demo-react18'
+  - './angular11-microfrontends-ngrx'
+  - './test'
+  - './multi-threaded-ssr'
+  - './umd-federation'
+  - './complete-react-case'
+  - './react-18-code-splitting'
+  - './version-discrepancy'
+  - './quasar-cli-vue3-webpack-javascript'
+  - './vue3-cli-demo'
+  - './angular15-microfrontends-lazy-components'
+  - './angular-universal-ssr'
+  - './loadable-react-16'
+  - './self-healing'
+  - './loadable-react-18'
+  - './vite-vue-microfrontends'
+  - './typescript'
+  - './typescript-react-monorepo'
+  - './native-federation-tests-typescript-plugins'
+  - './bi-directional'
+  - './vite-react-microfrontends'
+  - './vite-svelte-microfrontends'
+  - './medusa-example'
+  - './medusa-delegate-example'
+  - './cra-react-app-rewired'
+  - './angular12-microfrontends'
+  - './docs'
+  - './rust-wasm'
+  - './medusa-nx-native-federation-example'
+  - './shared-routing'
+  - './react-hmr'
+  - './dynamic-system-host'
+  - './angular14-react'
+  - './different-react-versions-typescript'
+  - './server-side-rendering'
+  - './different-react-versions-16-17'
+  - './server-side-render-only'
+  - './vue-cli'
+  - './modernjs'
+  - './vue3-demo-federation-with-vite'
+  - './react-in-vue'
+  - './different-react-versions-16-18'
+  - './shared-context'
+  - './federated-css-react-ssr'
+  - './react-18-ssr'
+  - './nextjs-v13'
+  - './different-react-versions-16-18-typescript'
+  - './nextjs-react'
+  - './cloud'
+  - './rollup-federation-demo'
+  - './.github'
+  - './third-party-scripts'
+  - './css-isolation'
+  - './modernjs-medusa'
+  - './nextjs-v12'
+  - './vue2-in-vue3'
+  - './angular11-microfrontends-ngxs'
+  - './react-18-server-2-server'
+  - './nextjs'
+  - './delegate-modules'
+  - './react-nextjs'
+  - './different-react-versions-isolated'
+  - './redux-reducer-injection'
+  - './cra'
+  - './shared-routes2'
+  - './startup-code'
+  - './i18next-nextjs-react'
+  - './angular11-microfrontends-scully'
+  - './nextjs-bi-directional'
+  - './.git'
+  - './nested'
+  - './dashboard-example'
+  - './typescript-monorepo'
+  - './advanced-api'
+  - './nextjs-sidecar'
+  - './genesis'
+  - './federated-css'
+  - './apollo-client'
+  - './native-federation-react'
+  - './different-react-versions-16-17-typescript'
+  - './vue3-demo'
