--- a/package.json
+++ b/package.json
@@ -169,6 +169,7 @@
     "forever": "4.0.3",
     "husky": "7.0.4",
     "jest": "26.6.3",
+    "lerna": "6.4.1",
     "mocha": "10.2.0",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
@@ -177,11 +178,9 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --ignore-scripts",
     "build": "lerna run --parallel build",
-    "submodules": "git pull --recurse-submodules",
     "prettier": "prettier --write \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "prettier:check": "prettier --list-different \"**/*.{js,jsx,json,md,ts,tsx}\"",
     "test": "jest test/index.spec.js --maxWorkers=2",
-    "postinstall": "git pull --recurse-submodules",
     "cypress:debug": "cypress open --e2e --config-file cypress/config/cypress.config.ts --browser=chrome",
     "cypress:run": "cypress run --config-file cypress/config/cypress.config.ts --browser=chrome",
     "report:generate": "allure generate ./cypress/results/allure-results --clean -o ./cypress/report",
