--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,100 +1,99 @@
 packages:
-  - './nextjs-ssr-delegate-modules'
-  - './shared-store-cross-framework'
-  - './native-federation-core-microfrontend'
-  - './nextjs-ssr-react-query'
-  - './vite-react-simple'
-  - './react-16-17-18-ssr'
-  - './nextjs-antd'
-  - './angular15-vue3'
-  - './nextjs-ssr'
-  - './different-react-versions'
-  - './typescript-project-references'
-  - './react-nested-routers'
-  - './basic-host-remote'
-  - './dynamic-remotes-node'
-  - './comprehensive-demo-react16'
-  - './styled-components'
-  - './federated-npm'
-  - './cypress'
-  - './comprehensive-demo-react18'
-  - './angular11-microfrontends-ngrx'
-  - './test'
-  - './multi-threaded-ssr'
-  - './umd-federation'
-  - './complete-react-case'
-  - './react-18-code-splitting'
-  - './version-discrepancy'
-  - './quasar-cli-vue3-webpack-javascript'
-  - './vue3-cli-demo'
-  - './angular15-microfrontends-lazy-components'
-  - './angular-universal-ssr'
-  - './loadable-react-16'
-  - './self-healing'
-  - './loadable-react-18'
-  - './vite-vue-microfrontends'
-  - './typescript'
-  - './typescript-react-monorepo'
-  - './native-federation-tests-typescript-plugins'
-  - './bi-directional'
-  - './vite-react-microfrontends'
-  - './vite-svelte-microfrontends'
-  - './medusa-example'
-  - './medusa-delegate-example'
-  - './cra-react-app-rewired'
-  - './angular12-microfrontends'
-  - './docs'
-  - './rust-wasm'
-  - './medusa-nx-native-federation-example'
-  - './shared-routing'
-  - './react-hmr'
-  - './dynamic-system-host'
-  - './angular14-react'
-  - './different-react-versions-typescript'
-  - './server-side-rendering'
-  - './different-react-versions-16-17'
-  - './server-side-render-only'
-  - './vue-cli'
-  - './modernjs'
-  - './vue3-demo-federation-with-vite'
-  - './react-in-vue'
-  - './different-react-versions-16-18'
-  - './shared-context'
-  - './federated-css-react-ssr'
-  - './react-18-ssr'
-  - './nextjs-v13'
-  - './different-react-versions-16-18-typescript'
-  - './nextjs-react'
-  - './cloud'
-  - './rollup-federation-demo'
-  - './.github'
-  - './third-party-scripts'
-  - './css-isolation'
-  - './modernjs-medusa'
-  - './nextjs-v12'
-  - './vue2-in-vue3'
-  - './angular11-microfrontends-ngxs'
-  - './react-18-server-2-server'
-  - './nextjs'
-  - './delegate-modules'
-  - './react-nextjs'
-  - './different-react-versions-isolated'
-  - './redux-reducer-injection'
-  - './cra'
-  - './shared-routes2'
-  - './startup-code'
-  - './i18next-nextjs-react'
-  - './angular11-microfrontends-scully'
-  - './nextjs-bi-directional'
-  - './.git'
-  - './nested'
-  - './dashboard-example'
-  - './typescript-monorepo'
-  - './advanced-api'
-  - './nextjs-sidecar'
-  - './genesis'
-  - './federated-css'
-  - './apollo-client'
-  - './native-federation-react'
-  - './different-react-versions-16-17-typescript'
-  - './vue3-demo'
+  - './nextjs-ssr-delegate-modules/*'
+  - './shared-store-cross-framework/*'
+  - './native-federation-core-microfrontend/*'
+  - './nextjs-ssr-react-query/*'
+  - './vite-react-simple/*'
+  - './react-16-17-18-ssr/*'
+  - './nextjs-antd/*'
+  - './angular15-vue3/*'
+  - './nextjs-ssr/*'
+  - './different-react-versions/*'
+  - './typescript-project-references/*'
+  - './react-nested-routers/*'
+  - './basic-host-remote/*'
+  - './dynamic-remotes-node/*'
+  - './comprehensive-demo-react16/*'
+  - './styled-components/*'
+  - './federated-npm/*'
+  - './cypress/*'
+  - './comprehensive-demo-react18/*'
+  - './angular11-microfrontends-ngrx/*'
+  - './test/*'
+  - './umd-federation/*'
+  - './complete-react-case/*'
+  - './react-18-code-splitting/*'
+  - './version-discrepancy/*'
+  - './quasar-cli-vue3-webpack-javascript/*'
+  - './vue3-cli-demo/*'
+  - './angular15-microfrontends-lazy-components/*'
+  - './angular-universal-ssr/*'
+  - './loadable-react-16/*'
+  - './self-healing/*'
+  - './loadable-react-18/*'
+  - './vite-vue-microfrontends/*'
+  - './typescript/*'
+  - './typescript-react-monorepo/*'
+  - './native-federation-tests-typescript-plugins/*'
+  - './bi-directional/*'
+  - './vite-react-microfrontends/*'
+  - './vite-svelte-microfrontends/*'
+  - './medusa-example/*'
+  - './medusa-delegate-example/*'
+  - './cra-react-app-rewired/*'
+  - './angular12-microfrontends/*'
+  - './docs/*'
+  - './rust-wasm/*'
+  - './medusa-nx-native-federation-example/*'
+  - './shared-routing/*'
+  - './react-hmr/*'
+  - './dynamic-system-host/*'
+  - './angular14-react/*'
+  - './different-react-versions-typescript/*'
+  - './server-side-rendering/*'
+  - './different-react-versions-16-17/*'
+  - './server-side-render-only/*'
+  - './vue-cli/*'
+  - './modernjs/*'
+  - './vue3-demo-federation-with-vite/*'
+  - './react-in-vue/*'
+  - './different-react-versions-16-18/*'
+  - './shared-context/*'
+  - './federated-css-react-ssr/*'
+  - './react-18-ssr/*'
+  - './nextjs-v13/*'
+  - './different-react-versions-16-18-typescript/*'
+  - './nextjs-react/*'
+  - './cloud/*'
+  - './rollup-federation-demo/*'
+  - './.github/*'
+  - './third-party-scripts/*'
+  - './css-isolation/*'
+  - './modernjs-medusa/*'
+  - './nextjs-v12/*'
+  - './vue2-in-vue3/*'
+  - './angular11-microfrontends-ngxs/*'
+  - './react-18-server-2-server/*'
+  - './nextjs/*'
+  - './delegate-modules/*'
+  - './react-nextjs/*'
+  - './different-react-versions-isolated/*'
+  - './redux-reducer-injection/*'
+  - './cra/*'
+  - './shared-routes2/*'
+  - './startup-code/*'
+  - './i18next-nextjs-react/*'
+  - './angular11-microfrontends-scully/*'
+  - './nextjs-bi-directional/*'
+  - './.git/*'
+  - './nested/*'
+  - './dashboard-example/*'
+  - './typescript-monorepo/*'
+  - './advanced-api/*'
+  - './nextjs-sidecar/*'
+  - './genesis/*'
+  - './federated-css/*'
+  - './apollo-client/*'
+  - './native-federation-react/*'
+  - './different-react-versions-16-17-typescript/*'
+  - './vue3-demo/*'
