--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,99 +1,191 @@
 packages:
   - './nextjs-ssr-delegate-modules/*'
+  - './nextjs-ssr-delegate-modules'
   - './shared-store-cross-framework/*'
+  - './shared-store-cross-framework'
   - './native-federation-core-microfrontend/*'
+  - './native-federation-core-microfrontend'
   - './nextjs-ssr-react-query/*'
+  - './nextjs-ssr-react-query'
   - './vite-react-simple/*'
+  - './vite-react-simple'
   - './react-16-17-18-ssr/*'
+  - './react-16-17-18-ssr'
   - './nextjs-antd/*'
+  - './nextjs-antd'
   - './angular15-vue3/*'
+  - './angular15-vue3'
   - './nextjs-ssr/*'
+  - './nextjs-ssr'
   - './different-react-versions/*'
+  - './different-react-versions'
   - './typescript-project-references/*'
+  - './typescript-project-references'
   - './react-nested-routers/*'
+  - './react-nested-routers'
   - './basic-host-remote/*'
+  - './basic-host-remote'
   - './dynamic-remotes-node/*'
+  - './dynamic-remotes-node'
   - './comprehensive-demo-react16/*'
+  - './comprehensive-demo-react16'
   - './styled-components/*'
+  - './styled-components'
   - './federated-npm/*'
+  - './federated-npm'
   - './cypress/*'
+  - './cypress'
   - './comprehensive-demo-react18/*'
+  - './comprehensive-demo-react18'
   - './angular11-microfrontends-ngrx/*'
+  - './angular11-microfrontends-ngrx'
   - './test/*'
+  - './test'
   - './umd-federation/*'
+  - './umd-federation'
   - './complete-react-case/*'
+  - './complete-react-case'
   - './react-18-code-splitting/*'
+  - './react-18-code-splitting'
   - './version-discrepancy/*'
+  - './version-discrepancy'
   - './quasar-cli-vue3-webpack-javascript/*'
+  - './quasar-cli-vue3-webpack-javascript'
   - './vue3-cli-demo/*'
+  - './vue3-cli-demo'
   - './angular15-microfrontends-lazy-components/*'
+  - './angular15-microfrontends-lazy-components'
   - './angular-universal-ssr/*'
+  - './angular-universal-ssr'
   - './loadable-react-16/*'
+  - './loadable-react-16'
   - './self-healing/*'
+  - './self-healing'
   - './loadable-react-18/*'
+  - './loadable-react-18'
   - './vite-vue-microfrontends/*'
+  - './vite-vue-microfrontends'
   - './typescript/*'
+  - './typescript'
   - './typescript-react-monorepo/*'
+  - './typescript-react-monorepo'
   - './native-federation-tests-typescript-plugins/*'
+  - './native-federation-tests-typescript-plugins'
   - './bi-directional/*'
+  - './bi-directional'
   - './vite-react-microfrontends/*'
+  - './vite-react-microfrontends'
   - './vite-svelte-microfrontends/*'
+  - './vite-svelte-microfrontends'
   - './medusa-example/*'
+  - './medusa-example'
   - './medusa-delegate-example/*'
+  - './medusa-delegate-example'
   - './cra-react-app-rewired/*'
+  - './cra-react-app-rewired'
   - './angular12-microfrontends/*'
-  - './docs/*'
+  - './angular12-microfrontends'
   - './rust-wasm/*'
+  - './rust-wasm'
   - './medusa-nx-native-federation-example/*'
+  - './medusa-nx-native-federation-example'
   - './shared-routing/*'
+  - './shared-routing'
   - './react-hmr/*'
+  - './react-hmr'
   - './dynamic-system-host/*'
+  - './dynamic-system-host'
   - './angular14-react/*'
+  - './angular14-react'
   - './different-react-versions-typescript/*'
+  - './different-react-versions-typescript'
   - './server-side-rendering/*'
+  - './server-side-rendering'
   - './different-react-versions-16-17/*'
+  - './different-react-versions-16-17'
   - './server-side-render-only/*'
+  - './server-side-render-only'
   - './vue-cli/*'
+  - './vue-cli'
   - './modernjs/*'
+  - './modernjs'
   - './vue3-demo-federation-with-vite/*'
+  - './vue3-demo-federation-with-vite'
   - './react-in-vue/*'
+  - './react-in-vue'
   - './different-react-versions-16-18/*'
+  - './different-react-versions-16-18'
   - './shared-context/*'
+  - './shared-context'
   - './federated-css-react-ssr/*'
+  - './federated-css-react-ssr'
   - './react-18-ssr/*'
+  - './react-18-ssr'
   - './nextjs-v13/*'
+  - './nextjs-v13'
   - './different-react-versions-16-18-typescript/*'
+  - './different-react-versions-16-18-typescript'
   - './nextjs-react/*'
+  - './nextjs-react'
   - './cloud/*'
+  - './cloud'
   - './rollup-federation-demo/*'
-  - './.github/*'
+  - './rollup-federation-demo'
   - './third-party-scripts/*'
+  - './third-party-scripts'
   - './css-isolation/*'
+  - './css-isolation'
   - './modernjs-medusa/*'
+  - './modernjs-medusa'
   - './nextjs-v12/*'
+  - './nextjs-v12'
   - './vue2-in-vue3/*'
+  - './vue2-in-vue3'
   - './angular11-microfrontends-ngxs/*'
+  - './angular11-microfrontends-ngxs'
   - './react-18-server-2-server/*'
+  - './react-18-server-2-server'
   - './nextjs/*'
+  - './nextjs'
   - './delegate-modules/*'
+  - './delegate-modules'
   - './react-nextjs/*'
+  - './react-nextjs'
   - './different-react-versions-isolated/*'
+  - './different-react-versions-isolated'
   - './redux-reducer-injection/*'
+  - './redux-reducer-injection'
   - './cra/*'
+  - './cra'
   - './shared-routes2/*'
+  - './shared-routes2'
   - './startup-code/*'
+  - './startup-code'
   - './i18next-nextjs-react/*'
+  - './i18next-nextjs-react'
   - './angular11-microfrontends-scully/*'
+  - './angular11-microfrontends-scully'
   - './nextjs-bi-directional/*'
-  - './.git/*'
+  - './nextjs-bi-directional'
   - './nested/*'
+  - './nested'
   - './dashboard-example/*'
+  - './dashboard-example'
   - './typescript-monorepo/*'
+  - './typescript-monorepo'
   - './advanced-api/*'
+  - './advanced-api'
   - './nextjs-sidecar/*'
+  - './nextjs-sidecar'
   - './genesis/*'
+  - './genesis'
   - './federated-css/*'
+  - './federated-css'
   - './apollo-client/*'
+  - './apollo-client'
   - './native-federation-react/*'
+  - './native-federation-react'
   - './different-react-versions-16-17-typescript/*'
+  - './different-react-versions-16-17-typescript'
   - './vue3-demo/*'
+  - './vue3-demo'
