--- a/package.json
+++ b/package.json
@@ -167,13 +167,15 @@
     "cypress-real-events": "1.7.6",
     "cypress-wait-until": "1.7.2",
     "forever": "4.0.3",
+    "glob": "^10.2.2",
     "husky": "7.0.4",
     "jest": "26.6.3",
     "lerna": "6.4.1",
     "mocha": "10.2.0",
     "prettier": "2.8.8",
     "pretty-quick": "3.1.3",
-    "wait-on": "7.0.1"
+    "wait-on": "7.0.1",
+    "yaml": "^2.2.2"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --ignore-scripts",
