--- a/package.json
+++ b/package.json
@@ -187,5 +187,6 @@
     "cypress:run": "cypress run --config-file cypress/config/cypress.config.ts --browser=chrome",
     "report:generate": "allure generate ./cypress/results/allure-results --clean -o ./cypress/report",
     "report:open": "allure open ./cypress/report"
-  }
+  },
+  "packageManager": "yarn@3.5.1"
 }
