--- a/react-16-17-18-ssr/shell/package.json
+++ b/react-16-17-18-ssr/shell/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@react-ssr/shell",
+  "name": "@react-ssr/shell-1",
   "version": "0.0.0",
   "scripts": {
     "start": "yarn build && yarn serve",
