--- a/nextjs-ssr/checkout/package.json
+++ b/nextjs-ssr/checkout/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.4.1-beta.2",
+    "@module-federation/nextjs-mf": "^6.4.1-rc.0",
     "lodash": "4.17.21",
     "next": "13.3.0",
     "react": "^18.2.0",
