--- a/nextjs-ssr/shop/package.json
+++ b/nextjs-ssr/shop/package.json
@@ -8,7 +8,7 @@
     "start": "NODE_ENV=production next start -p 3002"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.5.2-rc.0",
+    "@module-federation/nextjs-mf": "^6.5.2-rc3.1",
     "lodash": "4.17.21",
     "next": "13.3.0",
     "react": "^18.2.0",
