fix: add publicHost to prevent live-reload infinite loop

--- a/angular15-microfrontends-lazy-components/package.json
+++ b/angular15-microfrontends-lazy-components/package.json
@@ -7,8 +7,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:shell": "ng serve mdmf-shell --live-reload false",
-    "start:profile": "ng serve mdmf-profile --live-reload false",
+    "start:shell": "ng serve mdmf-shell",
+    "start:profile": "ng serve mdmf-profile",
     "build:shared": "ng build mdmf-shared",
     "build:shell": "ng build mdmf-shell",
     "build:profile": "ng build mdmf-profile --prod",
