--- a/nextjs-ssr-delegate-modules/shop/package.json
+++ b/nextjs-ssr-delegate-modules/shop/package.json
@@ -8,8 +8,8 @@
     "start": "NODE_ENV=production next start -p 3002"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.1.1",
-    "@module-federation/utilities": "1.3.0",
+    "@module-federation/nextjs-mf": "^6.5.2-rc8.0",
+    "@module-federation/utilities": "^1.8.2-rc8.0",
     "lodash": "4.17.21",
     "next": "13.3.0",
     "react": "^18.2.0",
