--- a/nextjs-ssr-delegate-modules/checkout/package.json
+++ b/nextjs-ssr-delegate-modules/checkout/package.json
@@ -8,8 +8,8 @@
     "start": "NODE_ENV=production next start"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "^6.5.2-rc8.0",
-    "@module-federation/utilities": "^1.8.2-rc8.0",
+    "@module-federation/nextjs-mf": "^7.0.0",
+    "@module-federation/utilities": "^2.0.0",
     "lodash": "4.17.21",
     "next": "13.3.1",
     "react": "^18.2.0",
