--- a/different-react-versions-16-17-typescript/package.json
+++ b/different-react-versions-16-17-typescript/package.json
@@ -1,6 +1,7 @@
 {
   "name": "different-react-versions-16-17-typescript",
   "private": true,
+  "version": "0.0.0",
   "workspaces": {
     "packages": [
       "app1",
