--- a/different-react-versions-16-18/package.json
+++ b/different-react-versions-16-18/package.json
@@ -1,6 +1,7 @@
 {
   "name": "different-react-versions-16-18",
   "private": true,
+  "version": "1.0.0",
   "workspaces": {
     "packages": [
       "app1",
