--- a/nextjs-ssr/home/package.json
+++ b/nextjs-ssr/home/package.json
@@ -3,17 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001",
+    "dev": "rm -rf .next; next dev -p 3001",
     "build": "next build",
     "start": "NODE_ENV=production next start -p 3001"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.7",
+    "@module-federation/nextjs-mf": "^6.5.2-rc6.0",
     "lodash": "4.17.21",
-    "next": "12.3.4",
+    "next": "13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "webpack": "5.80.0",
-    "webpack-merge": "^5.8.0"
+    "webpack": "5.80.0"
   }
 }
