--- a/nextjs-ssr/shop/package.json
+++ b/nextjs-ssr/shop/package.json
@@ -8,9 +8,9 @@
     "start": "NODE_ENV=production next start -p 3002"
   },
   "dependencies": {
-    "@module-federation/nextjs-mf": "6.0.7",
+    "@module-federation/nextjs-mf": "^6.5.2-rc6.0",
     "lodash": "4.17.21",
-    "next": "12.3.4",
+    "next": "13.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webpack": "5.80.0"
